@@ -119,19 +119,10 @@ spotbugs { reportLevel = 'low' } // low|medium|high (low = sensitive to even min
 
 apply from: rootProject.file('gradle/special-tests.gradle')
 tasks.withType(Test).configureEach {
-	def args = []
 	if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
 		// https://docs.gradle.org/7.5/userguide/upgrading_version_7.html#removes_implicit_add_opens_for_test_workers
-		args += [
-			"--add-opens=java.base/java.lang=ALL-UNNAMED",
-			"--add-opens=java.base/java.util=ALL-UNNAMED",
-		]
+		jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
 	}
-	if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_18)) {
-		// https://openjdk.org/jeps/411
-		args += "-Djava.security.manager=allow"
-	}
-	jvmArgs(args)
 }
 
 jar {
